--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.16",
+    "mysql2": "^3.3.3",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
+    "reduxjs-toolkit-persist": "^7.2.1",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.2.0"
   }
 }
