--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@prisma/client": "^4.15.0",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -31,5 +32,9 @@
     "reduxjs-toolkit-persist": "^7.2.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "prisma": "^4.15.0"
   }
 }
