--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formidable": "^2.1.1",
     "framer-motion": "^10.12.16",
     "mysql2": "^3.3.3",
     "next": "13.4.4",
