--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   },
